Remove duplicacao de bean CORS e ajusta CorsConfig